syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.openebs.mayastor";
option java_outer_classname = "MayastorProto";

package persistence;

enum ChildState {
  Init = 0;
  ConfigInvalid = 1;
  Open = 2;
  Destroying = 3;
  Closed= 4;
  Faulted = 5;
}

enum Reason {
  Unknown = 0;
  OutOfSync = 1;
  CantOpen = 2;
  RebuildFailed = 3;
  IoError = 4;
  Rpc = 5;
}

message ChildInfo {
  string uuid = 1;
  ChildState state = 2;
  Reason reason = 3;
}

message NexusInfo {
  bool clean_shutdown = 1;
  map<string, ChildInfo> children = 2;
}
